--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "broccoli-merge-trees": "^0.2.3",
-    "broccoli-static-compiler": "^0.2.2"
+    "broccoli-static-compiler": "^0.2.2",
+    "ember-truth-helpers": "1.3.0"
   }
 }
