--- a/package.json
+++ b/package.json
@@ -1,52 +1,60 @@
 {
   "name": "meratech",
   "version": "0.0.0",
-  "description": "Small description for meratech goes here",
   "private": true,
+  "description": "Small description for meratech goes here",
+  "repository": "",
+  "license": "MIT",
+  "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
     "test": "ember test"
   },
-  "repository": "",
-  "engines": {
-    "node": ">= 0.12.0"
-  },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "2.9.1",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-babel": "^5.1.7",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.0.10",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "@ember/optional-features": "^1.0.0",
+    "babel-eslint": "^10.0.3",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-cli": "~3.13.0",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-babel": "^7.11.1",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^4.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
     "ember-cli-i18n-observer": "0.0.2",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^1.0.4",
-    "ember-cli-qunit": "^3.0.1",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-sass": "latest",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.9.0",
-    "ember-export-application-global": "^1.0.5",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.3",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-data": "~3.13.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.7.0",
     "ember-i18n": "4.3.2",
     "ember-i18n-inject": "0.0.2",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
+    "ember-load-initializers": "^2.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^4.5.1",
+    "ember-resolver": "^5.3.0",
     "ember-simple-auth": "1.1.0",
-    "ember-welcome-page": "^1.0.3",
+    "ember-source": "~3.13.0",
+    "ember-welcome-page": "^4.0.0",
     "ember-wordpress": "0.1.1",
-    "loader.js": "^4.0.10",
-    "node-sass": "^4.12.0"
+    "eslint-plugin-ember": "^7.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "loader.js": "^4.7.0",
+    "node-sass": "^4.12.0",
+    "qunit-dom": "^0.9.0"
+  },
+  "engines": {
+    "node": "8.* || >= 10.*"
   },
   "dependencies": {
     "broccoli-merge-trees": "^0.2.3",
