Added support for slider API

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-component-css": "^0.7.4",
     "ember-data": "~3.13.1",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^6.7.1",
@@ -52,6 +53,7 @@
     "ember-wordpress": "^0.1.8",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
+    "ismobilejs": "^1.0.3",
     "loader.js": "^4.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
